--- a/src/index.html
+++ b/src/index.html
@@ -138,57 +138,63 @@
 
     <main class="main">
 
-        <section class="slider">
+        <section class="section slider">
             <div class="slider__container">
                 <div class="slider__list">
                     <div class="slider__slide slide" style="background-image: url(/assets/img/slider-slide-1.png);">
-                        <div class="slide__content">
-                            <p class="slide__subtitle">Мероприятетие</p>
-                            <h2 class="slide__title">Большая<br>летняя распродажа</h2>
-                            <p class="slide__text">Балтия мол празднует ежегодную большую летнюю распродажу, которая
-                                продлится с 20 июля по 20 сентября, в этом меропрятии примет участие 300 + бредов со
-                                скидками до 75%</p>
-                            <div class="button">
-                                <a href="" class="button__wrapp">
-                                    <p class="button__text">узнать больше</p>
-                                </a>
+                        <div class="wrapper">
+                            <div class="slide__content">
+                                <p class="slide__subtitle">Мероприятетие</p>
+                                <h2 class="slide__title">Большая<br>летняя распродажа</h2>
+                                <p class="slide__text">Балтия мол празднует ежегодную большую летнюю распродажу, которая
+                                    продлится с 20 июля по 20 сентября, в этом меропрятии примет участие 300 + бредов со
+                                    скидками до 75%</p>
+                                <div class="button">
+                                    <a href="" class="button__wrapp">
+                                        <p class="button__text">узнать больше</p>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="slider__slide slide" style="background-image: url(/assets/img/slider-slide-1.png);">
-                        <div class="slide__content">
-                            <p class="slide__subtitle">Мероприятетие</p>
-                            <h2 class="slide__title">Большая<br>летняя распродажа</h2>
-                            <p class="slide__text">Балтия мол празднует ежегодную большую летнюю распродажу, которая
-                                продлится с 20 июля по 20 сентября, в этом меропрятии примет участие 300 + бредов со
-                                скидками до 75%</p>
-                            <div class="button">
-                                <a href="" class="button__wrapp">
-                                    <p class="button__text">узнать больше</p>
-                                </a>
+                        <div class="wrapper">
+                            <div class="slide__content">
+                                <p class="slide__subtitle">Мероприятетие</p>
+                                <h2 class="slide__title">Большая<br>летняя распродажа</h2>
+                                <p class="slide__text">Балтия мол празднует ежегодную большую летнюю распродажу, которая
+                                    продлится с 20 июля по 20 сентября, в этом меропрятии примет участие 300 + бредов со
+                                    скидками до 75%</p>
+                                <div class="button">
+                                    <a href="" class="button__wrapp">
+                                        <p class="button__text">узнать больше</p>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="slider__buttons">
-                    <svg class="slider__prev" width="32" height="30" viewBox="0 0 32 30" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M0.09375 15L14.7969 29.7031L16.2031 28.2969L3.90625 16H32V14H3.90625L16.2031 1.70312L14.7969 0.296875L0.09375 15Z"
-                            fill="white" />
-                    </svg>
-                    <div class="slider__progres"></div>
-                    <svg class="slider__next" width="32" height="30" viewBox="0 0 32 30" fill="none"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M31.9062 15L17.2031 29.7031L15.7969 28.2969L28.0938 16H0V14H28.0938L15.7969 1.70312L17.2031 0.296875L31.9062 15Z"
-                            fill="white" />
-                    </svg>
+                <div class="wrapper">
+                    <div class="slider__buttons">
+                        <svg class="slider__prev" width="32" height="30" viewBox="0 0 32 30" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M0.09375 15L14.7969 29.7031L16.2031 28.2969L3.90625 16H32V14H3.90625L16.2031 1.70312L14.7969 0.296875L0.09375 15Z"
+                                fill="white" />
+                        </svg>
+                        <div class="slider__progres"></div>
+                        <svg class="slider__next" width="32" height="30" viewBox="0 0 32 30" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M31.9062 15L17.2031 29.7031L15.7969 28.2969L28.0938 16H0V14H28.0938L15.7969 1.70312L17.2031 0.296875L31.9062 15Z"
+                                fill="white" />
+                        </svg>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="events">
+        <section class="section events">
             <div class="wrapper">
                 <h2 class="title">Cобытия</h2>
                 <div class="events__list">
@@ -221,13 +227,13 @@
             </div>
         </section>
 
-        <section class="sales">
+        <section class="section sales">
             <div class="wrapper wrapper_right">
                 <h2 class="title">Акции</h2>
                 <div class="sales__grid">
                     <a href="" class="sales-banner sales-banner_half"
                         style="background-image: url(/assets/img/sales-banner-1.png);">
-                        <div class="sales-banner__content">
+                        <div class="sales-banner__content sales-banner__content_white">
                             <p class="sales-banner__text">Скидки до 50% в&#160;магазине детской одежды Original Marines
                             </p>
                             <p class="sales-banner__data">26 июня - 28 сентября</p>
@@ -260,7 +266,7 @@
             </div>
         </section>
 
-        <section class="instagram">
+        <section class="section instagram">
             <div class="wrapper">
                 <h2 class="title title_orange">Инстаграм</h2>
                 <div class="instagram__hashtag">
